[metadata]
name = jagt
version = attr: jagt.__version__
author = TomJGooding
description = Just another Git TUI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomJGooding/jagt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
python_requires = >=3.8
package_dir =
    = src
packages = find:
install_requires =
    textual >= 2.1.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    jagt = jagt.app:run

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    textual-dev
